examples/kubernetes-traefik/002-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: fabric-mc
  labels:
    app: fabric-mc

spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabric-mc
  template:
    metadata:
      labels:
        app: fabric-mc
    spec:
      nodeName: worker-1
      containers:
        - name: fabric-mc
          image: ghcr.io/dylanbulmer/minecraft-fabric:latest
          volumeMounts:
            - name: data
              mountPath: /server
          ports:
            - name: minecraft
              containerPort: 25565
      volumes:
        - name: data
          hostPath:
            path: /var/mc/fabric/server
