examples/kubernetes-traefik/003-Ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: fabric-mc-ingress
  namespace: default
  label:
    app: fabric-mc
spec:
  entryPoints:
    - minecraft
  routes:
    - match: HostSNI(`*`)
      kind: Rule
      services:
        - name: fabric-mc-svc
          namespace: default
          passHostHeader: true
          port: 25565
    - match: HostSNI(`*`)
      kind: Rule
      services:
        - name: fabric-mc-svc
          namespace: default
          passHostHeader: true
          port: 25575
